# clustering

./: README.md  dependencies.txt  environment.yaml  pyproject.toml
Py/: GUI.py  category.py  clustering.py  config.py  data_init.py  glass.py  glass_category.py  id.py  json_to_text.py  main.py  one_dimension.py  test.py  train.py  two_dimensions.py
Source/: category.txt  cocktail_dataset.txt  glass.txt  id.txt
