[tool.poetry]
name = "my_project"
version = "0.1.0"
description = "Project with specified dependencies"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"  # Lub inna wersja Pythona
dateutils = "0.6.12"
numpy = "2.1.2"
pandas = "2.2.3"
pip = "24.2"
python-dateutil = "2.9.0.post0"
pytz = "2024.2"
six = "1.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
