[tool.poetry]
name = "my_project"
version = "0.1.0"
description = "Project with specified dependencies"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.13.0"  # Adjust Python version as needed
dateutils = "0.6.12"
numpy = "2.1.2"
pandas = "2.2.3"
pip = "24.2"
python-dateutil = "2.9.0.post0"
pytz = "2024.2"
six = "1.16.0"
# Note: Tkinter is a built-in package in standard Python installations.
# It does not need to be added to dependencies.

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
